minor (#88): Implemented ping endpoint
