# solardoc/phoenix-server/lib/solardoc_phoenix/accounts/user.ex
@@ -63,7 +63,8 @@ defmodule SolardocPhoenix.Accounts.User do
     |> validate_length(:password, min: 12, max: 72)
     |> validate_format(:password, ~r/[a-z]/, message: "at least one lower case character")
     |> validate_format(:password, ~r/[A-Z]/, message: "at least one upper case character")
-    |> validate_format(:password, ~r/[!?@#$%^&*_0-9]/, message: "at least one digit or punctuation character")
+    |> validate_format(:password, ~r/[!?@#$%^&*_]/, message: "at least one special character")
+    |> validate_format(:password, ~r/[0-9]/, message: "at least one digit")
     |> maybe_hash_password(opts)
   end
 
